// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assigning a course to someone else through a CourseCard works, when the course has not been started yet. 1`] = `
.c0 {
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
}

.c4 {
  margin: 0;
}

.c6 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c6:hover {
  color: #cc2956;
}

.c6:focus {
  outline: none;
}

.c8 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c8:hover,
.c8:focus {
  color: #fff;
}

.c8:hover,
.c8:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c8:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c9 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c7 {
  margin-top: 24px;
  background-color: #77b227;
  width: 100%;
}

<li
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="sample_course_card_header.png"
  />
  <div
    className="c2"
  >
    <h2
      className="c3"
    >
      Awesome SEO Course
    </h2>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <button
      className="c6"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
        }
      }
    >
      <span>
        Assign to someone else
      </span>
    </button>
    <a
      aria-label={undefined}
      className="c7 c8"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Start this course
      </span>
    </a>
    <p
      className="c9"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c6"
        onClick={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
          }
        }
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`Assigning a course to someone else through a CourseCard works, when there are enrollments left. 1`] = `
.c0 {
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
}

.c4 {
  margin: 0;
}

.c12 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c12:hover {
  color: #cc2956;
}

.c12:focus {
  outline: none;
}

.c10 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c10:hover,
.c10:focus {
  color: #fff;
}

.c10:hover,
.c10:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c10:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c6 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c8 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c7 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c11 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c9 {
  margin-top: 24px;
  background-color: #77b227;
  width: 100%;
}

<li
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="sample_course_card_header.png"
  />
  <div
    className="c2"
  >
    <h2
      className="c3"
    >
      Awesome SEO Course
    </h2>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <span
        aria-label="current progress"
        className="c7"
      >
        50
        %
      </span>
      <div
        className="c8"
      />
    </div>
    <a
      aria-label={undefined}
      className="c9 c10"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
    </a>
    <p
      className="c11"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c12"
        onClick={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
          }
        }
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component matches the snapshot 1`] = `
.c0 {
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
}

.c4 {
  margin: 0;
}

.c12 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c12:hover {
  color: #cc2956;
}

.c12:focus {
  outline: none;
}

.c10 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c10:hover,
.c10:focus {
  color: #fff;
}

.c10:hover,
.c10:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c10:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c6 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c8 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c7 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c11 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c9 {
  margin-top: 24px;
  background-color: #77b227;
  width: 100%;
}

<li
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="sample_course_card_header.png"
  />
  <div
    className="c2"
  >
    <h2
      className="c3"
    >
      Awesome SEO Course
    </h2>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <span
        aria-label="current progress"
        className="c7"
      >
        50
        %
      </span>
      <div
        className="c8"
      />
    </div>
    <a
      aria-label={undefined}
      className="c9 c10"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
    </a>
    <p
      className="c11"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c12"
        onClick={[MockFunction]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that has no unassigned enrollments left, matches the snapshot 1`] = `
.c0 {
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
}

.c4 {
  margin: 0;
}

.c10 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c10:hover,
.c10:focus {
  color: #fff;
}

.c10:hover,
.c10:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c10:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c6 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c8 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c7 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c11 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c9 {
  margin-top: 24px;
  background-color: #77b227;
  width: 100%;
}

<li
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="sample_course_card_header.png"
  />
  <div
    className="c2"
  >
    <h2
      className="c3"
    >
      Awesome SEO Course
    </h2>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <span
        aria-label="current progress"
        className="c7"
      >
        50
        %
      </span>
      <div
        className="c8"
      />
    </div>
    <a
      aria-label={undefined}
      className="c9 c10"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
    </a>
    <p
      className="c11"
    >
      <span>
        5 / 5 assigned.
      </span>
       
      <a
        href="/courses/enrollments"
        onClick={[Function]}
      >
        <span>
          View
        </span>
      </a>
       | 
      <a
        aria-label={undefined}
        className={undefined}
        href="http://yoast.test/shop"
        rel={undefined}
        target={undefined}
      >
        <span>
          Get more
        </span>
      </a>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that has not been bought, matches the snapshot 1`] = `
.c0 {
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
}

.c4 {
  margin: 0;
}

.c9 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c9:hover {
  color: #cc2956;
}

.c9:focus {
  outline: none;
}

.c7 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c7:hover,
.c7:focus {
  color: #fff;
}

.c7:hover,
.c7:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c7:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c8 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c6 {
  background-color: #a4286a;
  width: 100%;
}

<li
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="sample_course_card_header.png"
  />
  <div
    className="c2"
  >
    <h2
      className="c3"
    >
      Awesome SEO Course
    </h2>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <a
      aria-label={undefined}
      className="c6 c7"
      href="http://yoast.test/shop"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Get the full course
      </span>
    </a>
    <p
      className="c8"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c9"
        onClick={[MockFunction]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that has not been started yet, matches the snapshot 1`] = `
.c0 {
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
}

.c4 {
  margin: 0;
}

.c6 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c6:hover {
  color: #cc2956;
}

.c6:focus {
  outline: none;
}

.c8 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c8:hover,
.c8:focus {
  color: #fff;
}

.c8:hover,
.c8:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c8:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c9 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c7 {
  margin-top: 24px;
  background-color: #77b227;
  width: 100%;
}

<li
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="sample_course_card_header.png"
  />
  <div
    className="c2"
  >
    <h2
      className="c3"
    >
      Awesome SEO Course
    </h2>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <button
      className="c6"
      onClick={[MockFunction]}
    >
      <span>
        Assign to someone else
      </span>
    </button>
    <a
      aria-label={undefined}
      className="c7 c8"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Start this course
      </span>
    </a>
    <p
      className="c9"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c6"
        onClick={[MockFunction]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that is completed, matches the snapshot 1`] = `
.c0 {
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
}

.c4 {
  margin: 0;
}

.c13 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c13:hover {
  color: #cc2956;
}

.c13:focus {
  outline: none;
}

.c11 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c11:hover,
.c11:focus {
  color: #fff;
}

.c11:hover,
.c11:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c11:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c10 {
  color: #000;
  background-color: #fff;
  border: 1px solid #000;
  min-width: 152px;
  text-shadow: none;
}

.c10:hover,
.c10:focus {
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border: 0;
  text-shadow: 0px 0px 2px #000;
}

.c6 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c8 {
  width: 100%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c7 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #fff;
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c12 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c9 {
  margin-top: 24px;
  width: 100%;
}

<li
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="sample_course_card_header.png"
  />
  <div
    className="c2"
  >
    <h2
      className="c3"
    >
      Awesome SEO Course
    </h2>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <span
        aria-label="current progress"
        className="c7"
      >
        100
        %
      </span>
      <div
        className="c8"
      />
    </div>
    <a
      aria-label={undefined}
      className="c9 c10 c11"
      href="http://yoast.academy.test/certificate"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        View your certificate
      </span>
    </a>
    <p
      className="c12"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c13"
        onClick={[MockFunction]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;
